--- a/circle.yml
+++ b/circle.yml
@@ -6,12 +6,12 @@ dependencies:
  
     test: 
     override: 
-     - ./terraform remote config -backend=S3 -backend-config="bucket=$BUCKET" -backend-config="key=terraform.tfstate" -backend-config="region=us-west-2" 
-     - ./terraform plan -out=terraform.plan 
+     - terraform remote config -backend=S3 -backend-config="bucket=$BUCKET" -backend-config="key=terraform.tfstate" -backend-config="region=us-west-2" 
+     - terraform plan -out=terraform.plan 
   
  
     deployment: 
     production: 
       branch: master 
       commands: 
-        - ./terraform apply terraform.plan 
+        - terraform apply terraform.plan 
